# verna

./: .cursorignore  .gitignore  AGENTS.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.claude/: settings.json
.do/: app.template.yaml  app.yaml
docs/: scrolling.md
verna/: __main__.py  config.py  console.py  create_spec.py  db.py  db_types.py  edit.py  migrator.py  random_cards.py  remove_lexeme.py  styles.py  upper_str_enum.py  verna.ini  verna.py
verna/migrations/: 001_create_cards.sql  002_add_context_sentence.sql  003_rp_to_text_array.sql  004_context_sentence_to_text_array.sql  005_make_arrays_not_null.sql  006_rename_example.sql  007_drop_base_form.sql  008_add_past_form_transcriptions.sql  009_deny_nulls_in_arrays.sql  010_translations_jsonb.sql
