[build-system]
requires = ['setuptools>=69']
build-backend = 'setuptools.build_meta'

[project]
name = 'verna'
version = '0.1.1'
description = 'CLI tools for lexeme cards, translation, and Telegram delivery'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
  'psycopg[binary]==3.2.10',
  'openai==2.9.0',
  'configargparse==1.7.1',
  'python-telegram-bot==22.6',
  'platformdirs==4.4.0',
  'prompt_toolkit==3.0.52',
  'pydantic==2.11.9',
  'Jinja2==3.1.6',
]
authors = [
  { name = 'igrmk' }
]
license = { text = 'MIT' }

[project.scripts]
verna = 'verna.verna:main'
verna-cards = 'verna.random_cards:main'
verna-edit = 'verna.edit:main'

[tool.setuptools]
packages = ['verna']

[tool.setuptools.package-data]
verna = ['verna.ini']

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
